@@ -27,4 +27,5 @@
 
 void baobab_scan_execute (GFile *location);
 
+
 #endif /* __BAOBAB_SCAN_H__ */
